--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
     </div>
     <nav>
       <a href="#">Home</a>
-      <a href="#shops">Shops</a>
-      <a href="#">Cart</a>
-      <a href="#">Login</a>
+      <a href="order.html">Shop</a>
+      <a href="#">Register</a>
+      <a href="#">About Us</a>
     </nav>
   </header>
 
@@ -129,4 +129,5 @@
 
 </body>
 </html>
+
 
