--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
       <h1>NaadanStore</h1>
     </div>
     <nav>
-      <a href="#">Home</a>
+      <a href="index.html">Home</a>
       <a href="order.html">Shop</a>
-      <a href="#">Register</a>
-      <a href="#">About Us</a>
+      <a href="register.html">Register</a>
+      <a href="about.html">About Us</a>
     </nav>
   </header>
 
@@ -124,6 +124,7 @@
 
 </body>
 </html>
+
 
 
 
