--- a/index.html
+++ b/index.html
@@ -3,128 +3,203 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NaadanStore - Local Marketplace</title>
+  <title>NaadanStore - Home</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      font-size: 26px; /* Doubled base font size from 16px to 32px */
       margin: 0;
-      background: #f5f5f5;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #f9fafb;
       color: #333;
     }
-    header {
-      background: white; /* Changed from #2e7d32 to white */
-      color: #2e7d32; /* Adjusted text color for contrast */
-      padding: 1rem 2rem;
+
+    /* Navigation Bar */
+    nav {
       display: flex;
       justify-content: space-between;
       align-items: center;
+      background: white;
+      padding: 1rem 2rem;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
-    header h1 {
+    nav .logo {
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: #2e7d32;
+    }
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 1.5rem;
       margin: 0;
     }
-    nav a {
-      color: #2e7d32; /* Adjusted link color for contrast */
-      margin-left: 1rem;
+    nav ul li a {
       text-decoration: none;
-      font-weight: bold;
+      color: #333;
+      font-weight: 500;
+      transition: color 0.3s;
     }
+    nav ul li a:hover {
+      color: #2e7d32;
+    }
+
+    /* Hero Section */
     .hero {
+      background: linear-gradient(to right, #2e7d32, #43a047);
+      color: white;
+      padding: 4rem 2rem;
       text-align: center;
-      padding: 3rem 2rem;
-      background: #e8f5e9;
     }
-    .hero h2 {
+    .hero h1 {
+      font-size: 2.5rem;
       margin-bottom: 1rem;
     }
-    .shops {
+    .hero p {
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+    }
+    .hero button {
+      padding: 0.8rem 2rem;
+      font-size: 1rem;
+      border: none;
+      border-radius: 30px;
+      background: white;
+      color: #2e7d32;
+      font-weight: bold;
+      cursor: pointer;
+      transition: all 0.3s;
+    }
+    .hero button:hover {
+      background: #f1f8f1;
+      transform: scale(1.05);
+    }
+
+    /* Features Section */
+    .features {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1rem;
-      padding: 2rem;
+      gap: 2rem;
+      padding: 3rem 2rem;
+      max-width: 1200px;
+      margin: auto;
     }
-    .shop-card {
+    .feature-card {
       background: white;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      padding: 1.5rem;
+      padding: 2rem;
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
       text-align: center;
+      transition: transform 0.3s, box-shadow 0.3s;
     }
-    .shop-card h3 {
-      margin: 0.5rem 0;
+    .feature-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
     }
-    .shop-card button {
+    .feature-card h3 {
+      color: #2e7d32;
+      margin-bottom: 1rem;
+    }
+
+    /* CTA Section */
+    .cta {
       background: #2e7d32;
       color: white;
+      text-align: center;
+      padding: 3rem 2rem;
+      border-radius: 20px 20px 0 0;
+    }
+    .cta h2 {
+      margin-bottom: 1rem;
+    }
+    .cta button {
+      margin-top: 1rem;
+      padding: 0.8rem 2rem;
+      font-size: 1rem;
       border: none;
-      padding: 0.5rem 1rem;
-      border-radius: 5px;
+      border-radius: 30px;
+      background: white;
+      color: #2e7d32;
+      font-weight: bold;
       cursor: pointer;
-      transition: background 0.3s;
-      font-size: 26px;
+      transition: all 0.3s;
     }
-    .shop-card button:hover {
-      background: #1b5e20;
-      
+    .cta button:hover {
+      background: #f1f8f1;
+      transform: scale(1.05);
     }
+
     footer {
       text-align: center;
+      background: #f1f1f1;
       padding: 1rem;
-      background: #2fc39bbb;
-      color: white;
-      margin-top: 2rem;
+      font-size: 0.9rem;
+      color: #555;
+    }
+
+    /* Mobile Responsiveness */
+    @media (max-width: 600px) {
+      .hero h1 {
+        font-size: 2rem;
+      }
+      .hero p {
+        font-size: 1rem;
+      }
     }
   </style>
 </head>
 <body>
 
-  <!-- Header -->
-  <header>
-    <div style="display: flex; align-items: center;">
-      <img src="logo.png" alt="NaadanStore Logo" style="height: 40px; margin-right: 10px;">
-      <h1>NaadanStore</h1>
-    </div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="order.html">Shop</a>
-      <a href="register.html">Register</a>
-      <a href="about.html">About Us</a>
-    </nav>
-  </header>
+  <!-- Navbar -->
+  <nav>
+    <div class="logo">NaadanStore</div>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="order.html">Order</a></li>
+      <li><a href="register.html">Register</a></li>
+      <li><a href="about.html">About</a></li>
+    </ul>
+  </nav>
 
   <!-- Hero Section -->
-  <section class="hero">
-    <h2>Support Local. Shop Smarter.</h2>
-    <p>Find local shops, order online, and get doorstep delivery.</p>
+  <div class="hero">
+    <h1>Welcome to NaadanStore</h1>
+    <p>Your trusted partner for daily needs, delivered to your doorstep.</p>
+    <button onclick="location.href='order.html'">Start Ordering</button>
+  </div>
+
+  <!-- Features Section -->
+  <section class="features">
+    <div class="feature-card">
+      <h3>🛒 Easy Ordering</h3>
+      <p>Just like writing a shopping list, order your essentials in seconds.</p>
+    </div>
+    <div class="feature-card">
+      <h3>🚚 Quick Delivery</h3>
+      <p>Get groceries, veggies, and essentials delivered to your doorstep.</p>
+    </div>
+    <div class="feature-card">
+      <h3>🏪 Support Local Stores</h3>
+      <p>We connect you with nearby shops so you shop locally and smartly.</p>
+    </div>
+    <div class="feature-card">
+      <h3>📱 Mobile Friendly</h3>
+      <p>Our platform is designed for comfort on any device, anywhere.</p>
+    </div>
   </section>
 
-  <!-- Shops Listing -->
-  <section id="shops" class="shops">
-    <div class="shop-card">
-      <h3>Super Grocery</h3>
-      <p>House holds fruits and vegetables</p>
-      <button>View Shop</button>
-    </div>
-    <div class="shop-card">
-      <h3>City Pharmacy</h3>
-      <p>Medicines and healthcare</p>
-      <button>View Shop</button>
-    </div>
-    <div class="shop-card">
-      <h3>Sweet Treats</h3>
-      <p>Bakery and Ice creams</p>
-      <button>View Shop</button>
-    </div>
+  <!-- CTA Section -->
+  <section class="cta">
+    <h2>Ready to Experience Hassle-Free Shopping?</h2>
+    <p>Join NaadanStore today and bring your essentials home the easy way.</p>
+    <button onclick="location.href='order.html'">Place Your Order Now</button>
   </section>
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 NaadanStore. All rights reserved.</p>
+    © 2025 NaadanStore. All rights reserved.
   </footer>
 
 </body>
 </html>
-
-
-
-
