--- a/index.html
+++ b/index.html
@@ -4,200 +4,103 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NaadanStore - Home</title>
+  
+  <!-- ✅ Bootstrap 5 CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
   <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #f9fafb;
-      color: #333;
-    }
+    /* Brand colors */
+    .brand-green { color: #2e7d32 !important; }
+    .brand-bg { background: #2e7d32 !important; }
+    .brand-gradient { background: linear-gradient(to right, #71b66b, #43a047); }
 
-    /* Navigation Bar */
-    nav {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+    /* Custom button */
+    .btn-brand {
       background: white;
-      padding: 1rem 2rem;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-    nav .logo {
-      font-size: 1.5rem;
+      color: #2e7d32;
       font-weight: bold;
-      color: #2e7d32;
-    }
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 1.5rem;
-      margin: 0;
-    }
-    nav ul li a {
-      text-decoration: none;
-      color: #333;
-      font-weight: 500;
-      transition: color 0.3s;
-    }
-    nav ul li a:hover {
-      color: #2e7d32;
-    }
-
-    /* Hero Section */
-    .hero {
-      background: linear-gradient(to right, #2e7d32, #43a047);
-      color: white;
-      padding: 4rem 2rem;
-      text-align: center;
-    }
-    .hero h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-    }
-    .hero p {
-      font-size: 1.2rem;
-      margin-bottom: 2rem;
-    }
-    .hero button {
-      padding: 0.8rem 2rem;
-      font-size: 1rem;
-      border: none;
       border-radius: 30px;
-      background: white;
-      color: #2e7d32;
-      font-weight: bold;
-      cursor: pointer;
       transition: all 0.3s;
     }
-    .hero button:hover {
+    .btn-brand:hover {
       background: #f1f8f1;
       transform: scale(1.05);
-    }
-
-    /* Features Section */
-    .features {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 2rem;
-      padding: 3rem 2rem;
-      max-width: 1200px;
-      margin: auto;
-    }
-    .feature-card {
-      background: white;
-      padding: 2rem;
-      border-radius: 16px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-      text-align: center;
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-    .feature-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
-    }
-    .feature-card h3 {
-      color: #2e7d32;
-      margin-bottom: 1rem;
-    }
-
-    /* CTA Section */
-    .cta {
-      background: #2e7d32;
-      color: white;
-      text-align: center;
-      padding: 3rem 2rem;
-      border-radius: 20px 20px 0 0;
-    }
-    .cta h2 {
-      margin-bottom: 1rem;
-    }
-    .cta button {
-      margin-top: 1rem;
-      padding: 0.8rem 2rem;
-      font-size: 1rem;
-      border: none;
-      border-radius: 30px;
-      background: white;
-      color: #2e7d32;
-      font-weight: bold;
-      cursor: pointer;
-      transition: all 0.3s;
-    }
-    .cta button:hover {
-      background: #f1f8f1;
-      transform: scale(1.05);
-    }
-
-    footer {
-      text-align: center;
-      background: #f1f1f1;
-      padding: 1rem;
-      font-size: 0.9rem;
-      color: #555;
-    }
-
-    /* Mobile Responsiveness */
-    @media (max-width: 600px) {
-      .hero h1 {
-        font-size: 2rem;
-      }
-      .hero p {
-        font-size: 1rem;
-      }
     }
   </style>
 </head>
-<body>
+<body class="bg-light text-dark">
 
-  <!-- Navbar -->
-  <nav>
-    <div class="logo">NaadanStore</div>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="order.html">Order</a></li>
-      <li><a href="register.html">Register</a></li>
-      <li><a href="about.html">About</a></li>
-    </ul>
+  <!-- ✅ Navbar -->
+  <nav class="navbar navbar-expand-lg bg-white shadow-sm sticky-top">
+    <div class="container">
+      <a class="navbar-brand fw-bold brand-green" href="#">NaadanStore</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="order.html">Order</a></li>
+          <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+        </ul>
+      </div>
+    </div>
   </nav>
 
-  <!-- Hero Section -->
-  <div class="hero">
-    <h1>Welcome to NaadanStore</h1>
-    <p>Your trusted partner for daily needs, delivered to your doorstep.</p>
-    <button onclick="location.href='order.html'">Start Ordering</button>
-  </div>
-
-  <!-- Features Section -->
-  <section class="features">
-    <div class="feature-card">
-      <h3>🛒 Easy Ordering</h3>
-      <p>Just like writing a shopping list, order your essentials in seconds.</p>
-    </div>
-    <div class="feature-card">
-      <h3>🚚 Quick Delivery</h3>
-      <p>Get groceries, veggies, and essentials delivered to your doorstep.</p>
-    </div>
-    <div class="feature-card">
-      <h3>🏪 Support Local Stores</h3>
-      <p>We connect you with nearby shops so you shop locally and smartly.</p>
-    </div>
-    <div class="feature-card">
-      <h3>📱 Mobile Friendly</h3>
-      <p>Our platform is designed for comfort on any device, anywhere.</p>
+  <!-- ✅ Hero Section -->
+  <section class="hero text-center text-white brand-gradient py-5">
+    <div class="container">
+      <!-- 🟢 Logo Added Here -->
+      <img src="logo.png" alt="NaadanStore Logo" width="100" class="mb-4">
+      <h1 class="fw-bold display-5 display-md-3">Welcome to NaadanStore</h1>
+      <p class="lead mb-4">Your trusted partner for daily needs, delivered to your doorstep.</p>
+      <a href="order.html" class="btn btn-brand btn-lg w-100 w-md-auto">Start Ordering</a>
     </div>
   </section>
 
-  <!-- CTA Section -->
-  <section class="cta">
-    <h2>Ready to Experience Hassle-Free Shopping?</h2>
-    <p>Join NaadanStore today and bring your essentials home the easy way.</p>
-    <button onclick="location.href='order.html'">Place Your Order Now</button>
+  <!-- ✅ Features Section -->
+  <section class="container py-5">
+    <div class="row g-4">
+      <div class="col-12 col-md-6 col-lg-3">
+        <div class="card h-100 shadow-sm text-center p-4">
+          <h3 class="brand-green">🛒 Easy Ordering</h3>
+          <p>Just like writing a shopping list, order your essentials in seconds.</p>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-3">
+        <div class="card h-100 shadow-sm text-center p-4">
+          <h3 class="brand-green">🚚 Quick Delivery</h3>
+          <p>Get groceries, veggies, and essentials delivered to your doorstep.</p>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-3">
+        <div class="card h-100 shadow-sm text-center p-4">
+          <h3 class="brand-green">🏪 Support Local Stores</h3>
+          <p>We connect you with nearby shops so you shop locally and smartly.</p>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-3">
+        <div class="card h-100 shadow-sm text-center p-4">
+          <h3 class="brand-green">📱 Mobile Friendly</h3>
+          <p>Our platform is designed for comfort on any device, anywhere.</p>
+        </div>
+      </div>
+    </div>
   </section>
 
-  <!-- Footer -->
-  <footer>
+  <!-- ✅ CTA Section -->
+  <section class="brand-bg text-white text-center py-5">
+    <div class="container">
+      <h2 class="fw-bold">Ready to Experience Hassle-Free Shopping?</h2>
+      <p class="lead">Join NaadanStore today and bring your essentials home the easy way.</p>
+      <a href="order.html" class="btn btn-brand btn-lg w-100 w-md-auto mt-3">Place Your Order Now</a>
+    </div>
+  </section>
+
+  <!-- ✅ Footer -->
+  <footer class="text-center bg-light py-3 small text-muted">
     © 2025 NaadanStore. All rights reserved.
   </footer>
 
