--- a/order.html
+++ b/order.html
@@ -4,68 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Place Order - NaadanStore</title>
+
+  <!-- ✅ Bootstrap 5 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
   <style>
     body {
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       background: #f5f7fa;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
     }
-    header {
-      width: 100%;
-      background: #2e7d32;
-      color: #fff;
-      text-align: center;
-      padding: 1rem;
-      font-size: 1.4rem;
-      font-weight: bold;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+    .navbar {
+      background-color: #2e7d32 !important;
+    }
+    .navbar-brand img {
+      height: 35px;
+      margin-right: 8px;
     }
     .form-container {
-      background: #fff;
-      width: 95%;
-      max-width: 500px;
-      margin: 2rem auto;
-      padding: 2rem;
+      max-width: 600px;
       border-radius: 16px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.1);
     }
-    .form-container h2 {
-      margin-bottom: 1.5rem;
-      text-align: center;
-      color: #333;
-      font-size: 1.5rem;
-    }
-    form input, form select, form textarea {
-      width: 100%;
-      padding: 1rem;
-      margin: 0.7rem 0;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      font-size: 1rem;
-      outline: none;
-    }
-    form textarea {
-      min-height: 100px;
-      resize: vertical;
-    }
-    form button {
-      width: 100%;
+    .btn-brand {
       background: linear-gradient(135deg, #43a047, #2e7d32);
       color: white;
-      border: none;
-      padding: 1rem;
-      font-size: 1.1rem;
       font-weight: bold;
-      border-radius: 10px;
-      cursor: pointer;
-      margin-top: 1rem;
-      transition: background 0.3s, transform 0.2s;
+      border: none;
+      transition: all 0.3s;
     }
-    form button:hover {
+    .btn-brand:hover {
       background: linear-gradient(135deg, #388e3c, #1b5e20);
       transform: scale(1.02);
     }
@@ -76,46 +43,78 @@
       color: green;
       font-size: 1rem;
     }
-    @media (max-width: 600px) {
-      header {
-        font-size: 1.2rem;
-        padding: 0.8rem;
-      }
-      .form-container {
-        padding: 1.5rem;
-      }
-      form input, form select, form textarea, form button {
-        font-size: 0.95rem;
-      }
+    footer {
+      background: #2e7d32;
+      color: #fff;
+      padding: 1rem;
+      margin-top: 3rem;
+      text-align: center;
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
 
-  <header>
-    NaadanStore – Place Your Order
-  </header>
+  <!-- ✅ Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+      <a class="navbar-brand d-flex align-items-center" href="index.html">
+        <img src="logo.png" alt="NaadanStore Logo"> NaadanStore
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link active" href="order.html">Order</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-  <div class="form-container">
-    <h2>Customer Order Form</h2>
-    <form id="orderForm">
-      <input type="text" name="CustomerName" placeholder="👤 Your Name" required>
-      <input type="tel" name="Phone" placeholder="📞 Phone Number" required>
-      <input type="text" name="Address" placeholder="🏠 Delivery Address" required>
-      <select name="Category" required>
-        <option value="">📂 Select Category</option>
-        <option value="Grocery">Grocery</option>
-        <option value="Vegetables">Vegetables</option>
-        <option value="Food">Food</option>
-        <option value="Electrical">Electrical</option>
-        <option value="Household">Household</option>
-      </select>
-      <textarea name="Description" placeholder="📝 Enter your product list here" required></textarea>
-      <button type="submit">✅ Place Order</button>
-    </form>
-    <div class="message" id="formMessage"></div>
+  <!-- ✅ Order Form -->
+  <div class="container my-5">
+    <div class="form-container bg-white p-4 p-md-5 mx-auto">
+      <h2 class="text-center mb-4 text-dark">Customer Order Form</h2>
+      
+      <form id="orderForm" class="needs-validation" novalidate>
+        <div class="mb-3">
+          <input type="text" name="CustomerName" class="form-control form-control-lg" placeholder="👤 Your Name" required>
+        </div>
+        <div class="mb-3">
+          <input type="tel" name="Phone" class="form-control form-control-lg" placeholder="📞 Phone Number" required>
+        </div>
+        <div class="mb-3">
+          <input type="text" name="Address" class="form-control form-control-lg" placeholder="🏠 Delivery Address" required>
+        </div>
+        <div class="mb-3">
+          <select name="Category" class="form-select form-select-lg" required>
+            <option value="">📂 Select Category</option>
+            <option value="Grocery">Grocery</option>
+            <option value="Vegetables">Vegetables</option>
+            <option value="Food">Food</option>
+            <option value="Electrical">Electrical</option>
+            <option value="Household">Household</option>
+          </select>
+        </div>
+        <div class="mb-3">
+          <textarea name="Description" class="form-control form-control-lg" placeholder="📝 Enter your product list here" rows="4" required></textarea>
+        </div>
+        <button type="submit" class="btn btn-brand btn-lg w-100">✅ Place Order</button>
+      </form>
+      <div class="message" id="formMessage"></div>
+    </div>
   </div>
 
+  <!-- ✅ Footer -->
+  <footer>
+    © 2025 NaadanStore | Support Local Stores 
+  </footer>
+
+  <!-- ✅ Script -->
   <script>
     const form = document.getElementById("orderForm");
     const message = document.getElementById("formMessage");
@@ -127,7 +126,6 @@
       const data = new FormData(form);
       data.append("type", "order");
 
-      // Clear fields immediately
       form.reset();
       message.textContent = "⏳ Placing your order...";
 
