--- a/register.html
+++ b/register.html
@@ -58,7 +58,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="order.html">Order</a></li>
+          <li class="nav-item"><a class="nav-link" href="order.html">Order Now</a></li>
           <li class="nav-item"><a class="nav-link active" href="register.html">Register Shop</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
         </ul>
@@ -139,3 +139,4 @@
 
 </body>
 </html>
+
