--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="order.html">Order</a></li>
-          <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="order.html">Order Now</a></li>
+          <li class="nav-item"><a class="nav-link" href="register.html">Shop Register</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
         </ul>
       </div>
     </div>
@@ -106,3 +106,4 @@
 
 </body>
 </html>
+
