--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NaadanStore - Home</title>
+  <meta>Buy fresh vegetables, fruits, groceries, fish, and meat online from NaadanStore<br>Support local shops while shopping smarter!</meta>
   
   <!-- ✅ Bootstrap 5 CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -106,4 +107,5 @@
 
 </body>
 </html>
+
 
