--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NaadanStore - Home</title>
+    <!-- Meta Description -->
+  <meta name="description" content="Buy fresh vegetables, fruits, groceries, fish, and meat online from NaadanStore. Support local shops while shopping smarter!">
+
+  <!-- Meta Keywords (optional, Google mostly ignores but can help a bit) -->
+  <meta name="keywords" content="online grocery, groceries, buy vegetables online, fresh fish, NaadanStore">
+
+  <!-- Meta Viewport (for mobile responsiveness) -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- ✅ Bootstrap 5 CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -106,6 +114,7 @@
 
 </body>
 </html>
+
 
 
 
