--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us - NaadanStore</title>
+  <meta name="description" content="NaadanStore connects families with local shops for fresh vegetables, groceries, and essentials. Learn more about our mission to support local businesses.">
+  <meta name="keywords" content="about NaadanStore, groceries, shops, local grocery delivery">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
@@ -128,3 +130,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
