--- a/register.html
+++ b/register.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Register Shop - NaadanStore</title>
+  <meta name="description" content="Register as a shop or customer with NaadanStore. Get groceries delivered or partner with us to reach more customers">
+  <meta name="keywords" content="register NaadanStore, join grocery delivery, local shop register, online groceries">
+ 
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
@@ -139,4 +142,5 @@
 
 </body>
 </html>
+
 
