--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div class="container">
       <h2 class="fw-bold">Ready to Experience Hassle-Free Shopping?</h2>
       <p class="lead">Join NaadanStore today and bring your essentials home the easy way.</p>
-      <a href="order.html" class="btn btn-brand btn-lg w-100 w-md-auto mt-3">Place Your Order Now</a>
+      <a href="register.html" class="btn btn-brand btn-lg w-100 w-md-auto mt-3">Register Now</a>
     </div>
   </section>
 
@@ -112,6 +112,7 @@
 
 </body>
 </html>
+
 
 
 
