--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <section class="brand-bg text-white text-center py-5">
     <div class="container">
       <h2 class="fw-bold">Ready to Experience Hassle-Free Shopping?</h2>
-      <p class="lead">Join NaadanStore today and Get early access with 50% OFF.</p>
+      <p class="lead">Join NaadanStore today and Get early access for Free.</p>
       <a href="register.html" class="btn btn-brand btn-lg w-100 w-md-auto mt-3">Register Now</a>
     </div>
   </section>
@@ -112,6 +112,7 @@
 
 </body>
 </html>
+
 
 
 
