--- a/index.html
+++ b/index.html
@@ -392,8 +392,8 @@
         </div>
         <div class="col-12 col-md-4">
           <h4 class="h5">Contact Us</h4>
-          <p><i class="fas fa-envelope me-2"></i> info@naadanstore.com</p>
-          <p><i class="fas fa-phone me-2"></i> +91 98765 43210</p>
+          <p><i class="fas fa-envelope me-2"></i> s.naadanstore@gmail.com</p>
+          <p><i class="fas fa-phone me-2"></i> </p>
         </div>
       </div>
       <hr class="my-4">
@@ -403,3 +403,4 @@
 
 </body>
 </html>
+
